# ml-playground

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check-and-lint.yml
assets/: data_preprocessed.csv
backend/: main.py  titanic.py
jupyter/: house_pricing_guess.ipynb  titanic.ipynb
ml/jupyter/: house_pricing_guess.ipynb  titanic.ipynb
ml/projects/houses/data/: data_preprocessed.csv
ml/projects/houses/models/: regression.py
src/: main.py
titanic-dataviz/: README.md  debug_nan.py  main.py  pyproject.toml
titanic-dataviz/jupyter/: titanic.ipynb
