[project]
name = "ml-playground"
version = "0.1.0"
description = "A general-purpose machine learning playground."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6.3",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "traitlets>=5.14.3",
]

[dependency-groups]
dev = [
    "pytest",
]
