[project]
name = "ml-playground"
version = "0.1.0"
description = "A general-purpose machine learning playground."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6.3",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "traitlets>=5.14.3",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.14.0",
]

[tool.ruff]
# Python version target
target-version = "py312"

# Line length (default: 88, same as black)
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".jupyter",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rules: pycodestyle (E, W), pyflakes (F), isort (I), pydocstyle (D)
# Full list: https://docs.astral.sh/ruff/rules/
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

# Disable specific rules that might be too strict for ML projects
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Jupyter notebooks and scripts can be more lenient
"ml/jupyter/*.py" = ["E402"]  # module level import not at top of file
"**/__init__.py" = ["F401"]   # unused imports (re-exports)

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"
